Refactor: Collector.toList() -> toList();로 변경